--- a/index.html
+++ b/index.html
@@ -6,17 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
     <title>Document</title>
 </head>
 
-<body>
-    
-    <main >
-        <section class="glass"></section>
+<!-- <body>
+
+    <main>
+        <section class="glass">
+            <h1>HTML TOPICS</h1>
+            <div class="content">
+                <h2>Span</h2>
+                <h2>Span</h2>
+            </div>
+        </section>
+
     </main>
     <div class="circle1"></div>
     <div class="circle2"></div>
-    
-</body>
+
+-->
+</body> 
+<script src="./questions/index.js"></script>
 
 </html>
