--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 
-<!-- <body>
+<body>
 
     <main>
         <section class="glass">
@@ -27,7 +27,7 @@
     <div class="circle1"></div>
     <div class="circle2"></div>
 
--->
+
 </body> 
 <script src="./questions/index.js"></script>
 
